--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,13 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.2.1",
     "@tanstack/react-query": "^5.87.1",
+    "ics": "^3.4.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.49.2",
+    "react-router-dom": "^6.21.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
