--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.21.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@hookform/resolvers": "^3.3.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
