--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mysten/dapp-kit": "0.19.11",
+    "@mysten/seal": "^0.9.6",
     "@mysten/sui": "1.45.2",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-icons": "^1.3.0",
